[colorcorrection] Apply current color temperature on screen hot plug

Summary:
Current color temperature must be applied immediately to hot pluged outputs.

BUG: 391623

Test Plan:
Manually. I'm working on auto tests with the new virtual output classes, but
since 5.12.4 will land before I can finish this work, I have to get this fix
in without them.

Reviewers: #kwin, broulik

Reviewed By: broulik

Subscribers: martinkostolny, broulik, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D11654